--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-  font-family: COmic Sans, sans-serif;
-  background-color: #FF8247;
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
   color: #333;
   text-align: center;
-  margin-top: 87px;
+  margin-top: 50px;
 }
