--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: COmic Sans, sans-serif;
+  font-family: Comic-Sans, sans-serif;
   background-color: #FF8247;
   color: #333;
   text-align: center;
